added additional info message

--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,13 @@
   <body>
     <div class="container">
       <h1>LinkedIn Outreach</h1>
+      <form>
+        <label for="additionalInfo">Additional Info:</label>
+        <input type="text" id="additionalInfo" name="additionalInfo"><br><br>
+      </form>
       <button id="extractButton">Generate message</button>
       <div id="loader"></div>
-      <p id="status">Output</p>
+      <p id="status"></p>
       <button id="copyButton">Copy Text</button>
     </div>
   </body>
